--- a/python_programs.ipynb
+++ b/python_programs.ipynb
@@ -25,15 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello kihd\n",
-      "Welcome to the python kihd\n"
+      "Hello Aafi\n",
+      "Welcome to the python Aafi\n"
      ]
     }
    ],
@@ -390,6 +390,7 @@
     }
    ],
    "source": [
+    "#love calculator\n",
     "name1=input()\n",
     "name2=input()\n",
     "combined=name1+name2\n",
