--- a/python_programs.ipynb
+++ b/python_programs.ipynb
@@ -378,6 +378,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 96,
    "metadata": {},
    "outputs": [
